2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/syscall_specs.c (roach_match_scspec): New function.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* tests/test_scspecs.c (test_name_and_one_arg): New function.
	(test_name_only): Likewise.
	(test_name_and_two_args): Likewise.
	(test_name_hex_args): Likewise.
	(test_name_any_args): Likewise.
	(test_name_backrefs_args): Likewise.
	(test_name_comparison_args): Likewise.

	* tests/Makefile.am (check_PROGRAMS): test-scspecs added.
	(test_scspecs_SOURCES): Defined.
	(test_scspecs_LDFLAGS): Likewise.

	* tests/test_scspecs.c: New file.
	(main): New function.

	* src/Makefile.am (libroach_la_SOURCES): Added syscall_specs.c

	* src/syscall_specs.c: New file.
	(roach_parse_scspec): New function.

	* src/roach.h (roach_sc_spec_arg_s): New struct.
	(roach_sc_spec_s): Likewise.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/roach.c (roach_wait): The syscall in the arch-dependant SC
	register could have been modified by an entering hook, such as
	inhibit.  Use the per-PID saved last_sc in that case.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/roach.c (roach_wait): pass entering_sc to the hook, not the
	possibly uninitialized ctx->entering_sc.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/syscall_names.c (std_syscalls): New global.
	(__SYSCALL): Macro defined in order to build the members of
	std_syscalls including asm/unistd.h.
	(syscall_names_initialize): Register the syscalls in std_syscalls
	into the hash.
	(register_name): Function deleted.
	* src/Makefile.am (syscall_names.c.inc): Rule deleted.
	(BUILT_SOURCES): Deleted.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/Makefile.am (BUILT_SOURCES): syscall_names.c.inc is
	automatically generated.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/syscall_names.c: Added a file header.

2015-04-03  Giuseppe Scrivano  <gscrivan@redhat.com>

	* tests/Makefile.am (LDADD): Fix order.
